--- a/1_rndr.tmpl
+++ b/1_rndr.tmpl
@@ -1,5 +1,3 @@
-generics template
+DAO
 
-daojavaa637807f-86b3-67a5-d5b1-e3421a61c480
-[@binder]abmjava 5a0c[@binder]abmjava d07834df-bb9e-9fe3[binder@] 1d5a-5c64-d14e[binder@] 
-abmjava 5100b5cf-4bc4-59e1 
+[@ UI/abm 80fb9eb0-1731-2f70 @] 
