Cambio de asociacion de elemento entidad por medio de arbol

--- a/2_rndr.tmpl
+++ b/2_rndr.tmpl
@@ -1,6 +1,4 @@
 ORM
+[@ DAL/dao 1-f8855815-1381-2b03 @] 
 
-[@ DAL/dao 32ceb5d6-aff4-72c2 @] [@ UI/abm de660a4d-b12f-d5cb @] 
-
-
-[@ DAL/dao 8d90f509-109f-7072 @] 
+[@ DAL/dao 1-936091e3-aa77-7566 @] [@ UI/abm 2-40cc9bc4-b9de-be66 @] 
